package org.example.codeHandler;

import java.io.IOException;

public interface Executor {
    String execute(String compiledFilePath, String[] args);
}
