package org.example.entity;

import lombok.Data;

@Data
public class AnswerItem {
    private int id;
    private String answer;
}
