package org.example.fileUtil;

import java.io.IOException;

public interface ScoreWriter {
    void writeScore(String filePath) throws IOException;
}
